Add RealtimeAPI test cases